# docs/swagger.yaml
@@ -8,8 +8,6 @@ definitions:
     properties:
       email:
         type: string
-      isVerified:
-        type: boolean
       password:
         type: string
       username:
@@ -181,6 +179,75 @@ paths:
           schema:
             $ref: '#/definitions/models.ErrorResponse'
       summary: Create a new user
+      tags:
+      - users
+  /api/account/reset:
+    post:
+      consumes:
+      - application/json
+      description: it resets password....
+      parameters:
+      - description: User data
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/models.User'
+      produces:
+      - text/plain
+      responses:
+        "200":
+          description: email sent
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      summary: Reset
+      tags:
+      - users
+  /api/account/resetendpoint:
+    post:
+      consumes:
+      - application/json
+      description: it resets password..
+      parameters:
+      - description: token
+        in: query
+        name: token
+        required: true
+        type: string
+      - description: User data
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/models.User'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.User'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+        "404":
+          description: User not found
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      summary: reset password
       tags:
       - users
 securityDefinitions:
