# models/models.go
@@ -16,7 +16,7 @@ type User struct {
 	Username   string `json:"username"`
 	Email      string `gorm:"unique" json:"email"`
 	Password   string `json:"password"`
-	IsVerified bool
+	IsVerified bool `json:"-"`
 }
 
 type Response struct {
